--- a/.github/linting.yml
+++ b/.github/linting.yml
@@ -6,10 +6,10 @@ on:
 
 jobs:
   lint:
-    name: "Code Linting"
+    name: 'Code Linting'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@5
       - uses: actions/checkout@v4
-      - run: pip install pylint
-      - run: pylint *.py
+      - uses: actions/setup-python@5
+      - run: pip3 install pylint
+      - run: pylint --fail-under=8.5 *.py
