--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       - run: find . -name "requirements.txt" | xargs -I {} echo "-r" {} >> all-requirements.txt
