--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-      - run: pip3 install pylint
+      - run: pip3 install -r requirements.txt
       - run: pylint --fail-under=8.5 */*.py
