--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,5 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: find . -name "requirements.txt" | xargs -I {} echo "-r" {} >> all-requirements.txt
+      - run: pip3 install -r all-requirements.txt
       - run: pip3 install pylint
       - run: pylint --fail-under=8.5 */*.py
