--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,12 +1,12 @@
  
 FROM python:latest
 
-copy . static
-COPY . app.py
-COPY . templates
-COPY . utils.py
-COPY . utils_db.py
-COPY .requirements.txt
+COPY static .   
+COPY app.py .
+COPY templates .
+COPY utils.py .
+COPY utils_db.py .
+COPY requirements.txt .
 
 RUN pip install -r requirements.txt
 
