--- a/dashboard/.streamlit/config.toml
+++ b/dashboard/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
-base="light"
-primaryColor="#FFFFFF"
-backgroundColor="#87CEEB"
-secondaryBackgroundColor="#FFC0CB"
-textColor="#141414"
+base="dark"
+primaryColor="#000000"
+backgroundColor="#001861"
+secondaryBackgroundColor="#000435"
+textColor="#FFFFFF"
 font="sans serif"
