--- a/dashboard/.streamlit/config.toml
+++ b/dashboard/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 base="dark"
 primaryColor="#000000"
-backgroundColor="#96bff1"
-secondaryBackgroundColor="#82a6f4"
+backgroundColor="#bfd6f2"
+secondaryBackgroundColor="#8faef2"
 textColor="#000000"
 font="sans serif"
